www/css/app.css
.ionic-logo {
    display: block;
    margin: 15px auto;
    width: 96px;
    height: 96px;
}

.logo {
    height: 150px;
    margin: 0 auto;
}

.icon-active {
    font-weight: bold;
}

.checkbox input:checked:before {
    border: 0;
    background: #444444;

}
.checkbox input:before {
    border: 1px solid lightgrey;
}

.inline-bar {
    border-color: #b2b2b2;
    background-color: #f8f8f8;
    color: #444; 
}    

.toggle input:checked+.track {
    border-color: #111 !important ;
    background-color: #444444 !important;
}

#event-detail-modal-content:before {
    content:'';
    float: left;
    height: 100%;
}
#event-detail-modal-content {
    height: 100%;
}

#event-detail-wrapper:after {
    content:'';
    display: block;
    clear: both;
}

.event-location-item {
    padding: 0;
}

    /*
#event-detail-modal-header {
    float: left;
    width: 100%;
}*/

.event-detail-content {
    top: 253px;
    border-color: #ddd;
    border-top-style: solid;
    border-width: 1px;
}

.event-detail-header {
    padding: 0;
}

.angular-leaflet-map {
    height: 100%;
}
.event-detail-others {
    height: 100%;
    padding: 0;
}

.event-detail-other-event {
    border-color: #ddd;
    border-top-style: solid;
    border-width: 1px;    
}

.event-detail-other-event-desc {
    margin-top: 7px;
}

.bar.bar-loading {
  display: block;
  height: 24px;
  
  /* starts right below a normal header */
  top: 44px;
  
  /* make the text centered vertically and horizontally */
  text-align: center;
  padding: 0;
  line-height: 24px;

  /* transition 'sliding down' (check below)*/
  -webkit-transition: 200ms all;
}

/* 
 * make the content's top changes animate.
 * might not always look good, but looks
 * good when our loader is added & removed
 */
.has-header {
  -webkit-transition: 200ms top;
}

.has-header.has-loading {
  /* 44px (header) + 24px */
  top: 68px;
}

/* make loading bar slide up/down */
.bar-loading.ng-enter,
.bar-loading.ng-leave.ng-leave-active {
  height: 0;
  border-width: 0px;
}

.bar-loading.ng-enter.ng-enter-active,
.bar-loading.ng-leave {
  height: 24px;
  border-width: 1px;
}

